--------------------------------------------------------------------------
---------                Ampache -- CHANGELOG                    ---------   
--------------------------------------------------------------------------

--------------------------------------------------------------------------
  v.3.5-Alpha1
	- Improved gather script for translations (Thx momo-i)
	- Added paging to the localplay playlist
	- Updated German Translation (Thx Laurent)
	- Fixed issue where Remote songs would never be removed from
		the democratic playlist
	- Fixed issue where user preferences weren't set correctly
		on stream (Thx lorijho)
	- Added caching of user preferences to avoid a SQL query on load
		(Thx Protagonist)
	- Fixed home menu not always displaying the entire contents
	- Fixed logic error with duplicate login setting which caused it
		to only work if mysql auth was used
	- Changed Passwords to SHA1 will prompt to reset password
        - Corrected some translation strings and added jp_JP (Thx momo-i)
	- Ignore filenames that start with . (hidden) solves an issue
		with mac filesystems
	- Fix tracking of stats for downloaded songs 
	- Fix divide by 0 error during transcode in some configurations
	- Remove root mysql pw requirement from installer
	- Added Image Dimensions on Find Album Art page
	- Added Confirmation Screen to Catalog Deletion
	- Reorganized Menu System and Added Modules section
	- Fix an error if you try to add a shoutbox for an invalid object
		(Thx atrophic)
	- Fixed issue with art dump on jpeg files (Thx atrophic)
        - Fixed issue with force http play and port not correctly specifying
                non-standard http port (Thx Deathcrow)
	- Remember Starts With value even if you switch tabs
	- Fixed rating caching so it actually completely works now
	- Removed redundent UPDATE on session table due to /util.php
	- Added Batch Download to single Artist view
	- Added back in the direct links on songs, requires download set